--- a/consultancy-firm-profile/thebombayconsultancy/package.json
+++ b/consultancy-firm-profile/thebombayconsultancy/package.json
@@ -10,6 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/outfit": "^5.0.14",
+    "@fontsource/roboto": "^5.0.14",
+    "axios": "^1.7.5",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
+    "mongoose": "^8.6.0",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
