--- a/consultancy-firm-profile/thebombayconsultancy/server/config.env
+++ b/consultancy-firm-profile/thebombayconsultancy/server/config.env
@@ -1,1 +1,2 @@
 PORT=3000
+MONGODB_URI=mongodb+srv://murtazashabbir:HHf80v4odrkyPfLn@clustertbc.vzjol.mongodb.net/TheBombayConsultancy?retryWrites=true&w=majority&appName=ClusterTBC
