--- a/consultancy-firm-profile/thebombayconsultancy/package.json
+++ b/consultancy-firm-profile/thebombayconsultancy/package.json
@@ -22,7 +22,8 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.1.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
