--- a/consultancy-firm-profile/thebombayconsultancy/server/package.json
+++ b/consultancy-firm-profile/thebombayconsultancy/server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.6.0",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4"
   }
 }
