--- a/consultancy-firm-profile/thebombayconsultancy/package.json
+++ b/consultancy-firm-profile/thebombayconsultancy/package.json
@@ -14,16 +14,19 @@
     "@fontsource/cedarville-cursive": "^5.0.13",
     "@fontsource/outfit": "^5.0.14",
     "@fontsource/roboto": "^5.0.14",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "axios": "^1.7.5",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "install": "^0.13.0",
     "mongoose": "^8.6.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
+    "npm": "^10.8.3",
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
