--- a/consultancy-firm-profile/thebombayconsultancy/package.json
+++ b/consultancy-firm-profile/thebombayconsultancy/package.json
@@ -16,12 +16,13 @@
     "@fontsource/roboto": "^5.0.14",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "axios": "^1.7.5",
-    "body-parser": "^1.20.2",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
-    "express": "^4.19.2",
+    "express": "^4.21.0",
     "install": "^0.13.0",
-    "mongoose": "^8.6.0",
+    "mongoose": "^8.6.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
