--- a/consultancy-firm-profile/thebombayconsultancy/server/package.json
+++ b/consultancy-firm-profile/thebombayconsultancy/server/package.json
@@ -10,11 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.0",
     "mongodb": "^6.8.0",
-    "mongoose": "^8.6.0",
+    "mongoose": "^8.6.3",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4"
   }
