Add image urls in database, Add dropdown in service navbar

--- a/consultancy-firm-profile/thebombayconsultancy/server/package.json
+++ b/consultancy-firm-profile/thebombayconsultancy/server/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.6.3",
     "nodemailer": "^6.9.15",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "react-router-dom": "^6.27.0"
   }
 }
