--- a/consultancy-firm-profile/thebombayconsultancy/package.json
+++ b/consultancy-firm-profile/thebombayconsultancy/package.json
@@ -15,7 +15,7 @@
     "@fontsource/outfit": "^5.0.14",
     "@fontsource/roboto": "^5.0.14",
     "@fortawesome/fontawesome-free": "^6.6.0",
-    "axios": "^1.7.5",
+    "axios": "^1.7.7",
     "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
@@ -32,6 +32,7 @@
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.27.0",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
